adds modal for daily journal, low mood also assesment deails page

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,6 +105,9 @@
   body {
     @apply bg-background text-foreground;
   }
+    html {
+    font-family: var(--font-outfit);
+  }
 }
 
 @layer utilities {
